# rust-prime

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOY.md  LICENSE  PYTHON_VS_RUST_GPT2_COMPARISON.md  README.md  UI_FUNCTIONALITY.md  cargo.toml  section_1_performance.md  section_2_modularization.md  section_2_modularization_translated.md  section_3_api.md  section_3_ergonomics_translated.md  tensor_engine_improvements_rust.md  test_tokenizer.json
resources/: README.md
resources/tokenizer_data/gpt2/: sample_token_ids.json
rust-native-transformer/: Cargo.toml  README.md
rust-native-transformer/benches/: tensor_ops_benchmark.rs
rust-native-transformer/src/: lib.rs  main.rs  model_loader.rs  resonance_feedback.rs  runtime_interface.rs  tensor_engine.rs  text_generator.rs  tokenizer_core.rs  training.rs  transformer_core.rs
rust-native-transformer/tensor_core_optimized/: Cargo.toml
rust-native-transformer/tensor_core_optimized/src/: lib.rs
rust-native-transformer/tests/: cli_tests.rs
src/: README.md  accelerator.rs  attention.rs  cache_tier.rs  common.rs  config.rs  gating.rs  lib.rs  main.rs  mlp.rs  model.rs  moe.rs  orchestrator.rs  repl.rs  repl_feedback.rs  system_resources.rs  tokenizer.rs
src/native/: lib.rs  model_loader.rs  resonance_feedback.rs  runtime_interface.rs  tensor_engine.rs  text_generator.rs  transformer_core.rs
src/ndarray_specific/: attention.rs  common.rs  gating.rs  mlp.rs  mod.rs  model.rs  moe.rs  orchestrator.rs  repl.rs
src/ui/: index.html  mod.rs  routes.rs
src/ui/test_data/: dummy.safetensors  dummy_corrupted.safetensors  other_file.txt  tokenizer.json  tokenizer_corrupted.json
tests/: ui_integration_tests.rs
