[package]
name = "rust_transformers_gpt2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizers = "0.15.0"
ndarray = { version = "0.15.6", optional = true }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
safetensors = "0.5.0"
clap = { version = "4.4.8", features = ["derive"] }
ndarray-stats = { version = "0.5.1", optional = true } # Added for GatingLayer (QuantileExt, etc.)
sysinfo = "0.29.0" # Added for system monitoring
log = "0.4"
libm = "0.2.8" # For math functions like tanhf in GELU

[features]
default = []
tokenizer-debug-logs = []
ndarray_backend = ["dep:ndarray", "dep:ndarray-stats"]

[[bin]]
name = "native_cli"
path = "src/bin/native_cli.rs"

[[bin]]
name = "experimental_repl"
path = "src/bin/experimental_repl.rs"
required-features = ["ndarray_backend"]

[dev-dependencies]
approx = "0.5"
tempfile = "3.3.0"
proptest = "1.0"
