[package]
name = "rust_native_transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "rust_native_transformer_cli"
path = "src/main.rs"

[lib]
name = "rust_native_transformer"
path = "src/lib.rs"
