[package]
name = "rust_native_transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10" # Or any recent version

[[bin]]
name = "rust_native_transformer_cli"
path = "src/main.rs"

[lib]
name = "rust_native_transformer"
path = "src/lib.rs"
