[package]
name = "rust_native_transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10" 
criterion = "0.4.0" # Changed from 0.5
rand = "0.8" # Ensure rand is present for benchmarks

[[bin]]
name = "rust_native_transformer_cli"
path = "src/main.rs"

[[bench]]
name = "tensor_ops_benchmark"
harness = false
# path should be benches/tensor_ops_benchmark.rs, Cargo will infer this if the file exists in the conventional location.
# If explicitly setting, it would be path = "benches/tensor_ops_benchmark.rs"
# For now, removing the incorrect path line and letting Cargo infer is safer.

[lib]
name = "rust_native_transformer"
path = "src/lib.rs"
